[tool.poetry]
name = "pymoliath"
version = "0.1.0"
description = ""
authors = ["Bastian Werner <bastian.werner@aptone.io>"]

[tool.poetry.dependencies]
python = "~3.7.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
