[tool.poetry]
name = "pymoliath"
version = "1.0.0"
description = ""
authors = ["Bastian Werner <bastian-werner@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
